--- a/SupportBank/SupportBank/NLog.config
+++ b/SupportBank/SupportBank/NLog.config
@@ -16,7 +16,10 @@
   for information on customizing logging rules and outputs.
    -->
   <targets>
-
+    
+    <!-- Using the colored console as my target-->
+    <target xsi:type="ColoredConsole" name="colored_console"/>
+    
     <!--
     add your targets here
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -24,18 +27,19 @@
     -->
 
     <!--
-    Write events to a file with the date in the filename.
+    Write events to a file with the date in the filename.     -->
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
-    -->
+
   </targets>
 
   <rules>
     <!-- add your logging rules here -->
-
+    <!-- Writing everything to the cololred console -->
+    <logger name="*" minlevel="Trace" writeTo="colored_console"/>
     <!--
-    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
+    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"    -->
     <logger name="*" minlevel="Debug" writeTo="f" />
-    -->
+
   </rules>
 </nlog>
